<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:visibility="gone">




    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:background="@android:color/white"
        android:layout_above="@id/switch_offline">


        <ImageView
            android:id="@+id/image_opt_file"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_file_default_24dp" />


        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="27dp"
            android:layout_toEndOf="@+id/image_opt_file">

            <TextView
                android:id="@+id/text_opt_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="0dp"
                android:padding="0dp"
                android:text="@string/str_name"
                android:textAlignment="textStart"
                android:textColor="@android:color/darker_gray"
                android:textSize="16sp"
                android:typeface="sans" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_opt_name"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_opt_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:padding="0dp"
                    android:textColor="@android:color/darker_gray"
                    android:text="@string/str_size" />

                <TextView
                    android:id="@+id/text_opt_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:textColor="@android:color/darker_gray"
                    android:text="@string/str_date" />



            </RelativeLayout>


        </RelativeLayout>

        <ImageView
            android:id="@+id/image_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            app:srcCompat="@drawable/ic_close_white_24dp"
            tools:ignore="VectorDrawableCompat" />


    </RelativeLayout>


    <Switch
        android:id="@+id/switch_offline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:checked="true"
        android:drawablePadding="15dp"
        android:padding="20dp"
        android:background="@android:color/white"
        android:layout_above="@id/option_board"
        android:text="@string/str_offline" />

    <TableLayout
        android:id="@+id/option_board"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:showDividers="beginning|middle|end">

        <TableRow style="@style/keyboard_row">

            <TextView
                android:id="@+id/btn_delete"
                style="@style/keyboard_number_button2"
                android:drawablePadding="5dp"
                android:drawableTop="@drawable/ic_delete_black_24dp"
                android:text="@string/str_delete"
                android:textAlignment="center"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/btn_move"
                style="@style/keyboard_number_button2"
                android:drawablePadding="5dp"
                android:drawableTop="@drawable/ic_arrow_forward_black_24dp"
                android:text="@string/str_move"
                android:textSize="12sp" />
            <TextView
                android:id="@+id/btn_rename"
                style="@style/keyboard_number_button2"
                android:drawablePadding="5dp"
                android:drawableTop="@drawable/ic_mode_edit_black_24dp"
                android:text="@string/str_rename"
                android:textSize="12sp" />
        </TableRow>

        <TableRow style="@style/keyboard_row">

            <TextView
                android:id="@+id/btn_share"
                style="@style/keyboard_number_button2"
                android:drawablePadding="5dp"
                android:drawableTop="@drawable/ic_share_black_24dp"
                android:text="@string/str_share"
                android:textSize="12sp"

                />

            <TextView
                android:id="@+id/btn_open_with"
                style="@style/keyboard_number_button2"
                android:drawablePadding="5dp"
                android:drawableTop="@drawable/ic_open_in_new_black_24dp"
                android:text="@string/str_open"
                android:textSize="12sp" />
            <TextView
                android:id="@+id/btn_share_link"
                style="@style/keyboard_number_button2"
                android:drawablePadding="5dp"
                android:drawableTop="@drawable/ic_insert_link_black_24dp"
                android:text="@string/str_share_link"
                android:textSize="12sp" />
        </TableRow>

        <TableRow style="@style/keyboard_row">

        </TableRow>

        <TableRow style="@style/keyboard_row">

        </TableRow>
    </TableLayout>

</RelativeLayout>