<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/contact_item"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:orientation="horizontal"
    android:background="@drawable/item_pressed_layout"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:orientation="horizontal"
        android:padding="10dp">


        <ImageView
            android:id="@+id/rounded_iv_profile"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_file_default_24dp"
            />


        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginStart="27dp"
            android:layout_toEndOf="@+id/rounded_iv_profile">

            <TextView
                android:id="@+id/text_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="0dp"
                android:padding="0dp"
                android:text="@string/str_name"
                android:textAlignment="textStart"
                android:textColor="#000000"
                android:textSize="16sp"
                android:typeface="sans"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/text_name"
                >

                <TextView
                    android:id="@+id/text_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:padding="0dp"
                    android:text="@string/str_size"/>

                <TextView
                    android:id="@+id/text_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/str_date"/>

            </LinearLayout>


        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>